--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -14,7 +14,7 @@ body {
 .top-area {
     background-color: #f8f9fa;
     padding: 10px 20px;
-     background-image: linear-gradient( 135deg, #f2c2d2 10%, #ef92b2 100%);
+     border-bottom:3px solid linear-gradient( 135deg, #f2c2d2 10%, #ef92b2 100%);
 border-radius: 0 0 75% 85% / 50%;
 }
 
@@ -54,7 +54,7 @@ li{
    
 }
 .nav-link{
-	color:#fff;
+	color:#8d8d8d;
     padding: 0;
     margin: 0;
     text-decoration: none;
@@ -214,7 +214,7 @@ search-form {
 
 .center-category a {
     text-decoration: none;
-    color: #fff;
+    color: #8d8d8d;
     font-weight: bold;
 }
 
