--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -1,234 +1,216 @@
 @charset "UTF-8";
 
-html,
-body {
-  height: 100%;
-  min-height: 100%;
+html, body {
+	height: 100%;
+	min-height: 100%;
 }
 
 body {
-  margin: 0;
-
+	margin: 0;
 }
 
 .top-area {
-    background-color: #ffeb60;
-    padding: 10px 20px;
-     border-bottom:3px solid linear-gradient( 135deg, #f2c2d2 10%, #ef92b2 100%);
-border-radius: 0 0 75% 85% / 50%;
+	padding: 10px 20px;
+	border-bottom-color: #333;
 }
-
 
 .top-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }
-
 
 .top-logo a {
-    display: block;
-    width: 150px;
-    height: 100px;
-    background-image: url("/images/layout/jam.png"); 
-    background-size: contain;
-    background-repeat: no-repeat;
+	display: block;
+	width: 100px;
+	height: 50px;
+	background-image: url("/images/layout/jam.png");
+	background-size: contain;
+	background-repeat: no-repeat;
+	margin-top: 10px;
+	margin-left: 30px;
 }
-.top-logo a:hover{
+/* .top-logo a:hover{
 
-    width: 150px;
-    height: 100px;
+    width: 100px;
+    height: 50px;
     background-image: url("/images/layout/jam.gif"); 
     background-size: contain;
    
-}
-
-
+} */
 .nav-item {
-    display: flex;
-    align-items: center;
+	display: flex;
+	align-items: center;
 }
 
 .nav-item label {
-    margin-left: 20px;
+	margin-left: 20px;
 }
 
 .nav-login {
-    cursor: pointer;
-}
-li{
-	 margin-right:15px;
-    list-style: none;
-   
-}
-.nav-link{
-	color:#8d8d8d;
-    padding: 0;
-    margin: 0;
-    text-decoration: none;
+	cursor: pointer;
 }
 
+li {
+	margin-right: 15px;
+	list-style: none;
+}
 
+.nav-link {
+	color: #8d8d8d;
+	padding: 0;
+	margin: 0;
+	text-decoration: none;
+}
 
 /* 검색 버튼 스타일 */
 .search-tb {
-  display: table;
-  width: 95%;
+	display: table;
+	width: 95%;
 }
 
 .search-td {
-  display: table-cell;
-  vertical-align: middle;
+	display: table-cell;
+	vertical-align: middle;
 }
 
-.search-input,
-.search-button {
-  color: black;
-  font-family: Nunito;
-  padding: 0;
-  margin-left: 100px;
-  border: 0;
-  background-color: transparent;
+.search-input, .search-button {
+	color: black;
+	font-family: Nunito;
+	padding: 0;
+	margin-left: 100px;
+	border: 0;
+	background-color: transparent;
 }
 
 #cover {
-  left: 0;
-  right: 0;
-  width: 1400px;
-  margin: -83px auto 0 auto;
-  background-color: #fff;
-  border:15px solid #ff4d6d;
-  border-radius: 90px;
-  transform: scale(0.3);
-  
+	left: 0;
+	right: 0;
+	width: 1400px;
+	margin: -83px auto 0 auto;
+	background-color: #fff;
+	border: 15px solid #ff4d6d;
+	border-radius: 90px;
+	transform: scale(0.3);
 }
 
 search-form {
-  height: 30px;
+	height: 30px;
 }
 
 .search-input[type="text"] {
-  width: 100%;
-  height: 96px;
-  font-size: 50px;
-
+	width: 100%;
+	height: 96px;
+	font-size: 50px;
 }
 
 .search-input[type="text"]::placeholder {
-  color: #ebe6e4;
+	color: #ebe6e4;
 }
 
 #s-cover {
-  width: 1px;
-  padding-left: 35px;
+	width: 1px;
+	padding-left: 35px;
 }
 
 .search-button {
-  position: relative;
-  display: block;
-  width: 84px;
-  height: 96px;
-  cursor: pointer;
+	position: relative;
+	display: block;
+	width: 84px;
+	height: 96px;
+	cursor: pointer;
 }
 
 #s-circle {
-  position: relative;
-  top: -8px;
-  left: 0;
-  width: 43px;
-  height: 43px;
-  margin-top: 0;
-  border-width: 15px;
-  border: 15px solid #ff4081;
-  background-color: transparent;
-  border-radius: 50%;
-  transition: 0.5s ease all;
+	position: relative;
+	top: -8px;
+	left: 0;
+	width: 43px;
+	height: 43px;
+	margin-top: 0;
+	border-width: 15px;
+	border: 15px solid #ff4081;
+	background-color: transparent;
+	border-radius: 50%;
+	transition: 0.5s ease all;
 }
 
 .search-button span {
-  position: absolute;
-  top: 68px;
-  left: 43px;
-  display: block;
-  width: 45px;
-  height: 15px;
-  background-color: transparent;
-  border-radius: 10px;
-  transform: rotateZ(52deg);
-  transition: 0.5s ease all;
+	position: absolute;
+	top: 68px;
+	left: 43px;
+	display: block;
+	width: 45px;
+	height: 15px;
+	background-color: transparent;
+	border-radius: 10px;
+	transform: rotateZ(52deg);
+	transition: 0.5s ease all;
 }
 
-.search-button span:before,
-.search-button span:after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  width: 45px;
-  height: 15px;
-  background-color: #ff4081;
-  border-radius: 10px;
-  transform: rotateZ(0);
-  transition: 0.5s ease all;
+.search-button span:before, .search-button span:after {
+	content: "";
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	width: 45px;
+	height: 15px;
+	background-color: #ff4081;
+	border-radius: 10px;
+	transform: rotateZ(0);
+	transition: 0.5s ease all;
 }
 
 #s-cover:hover #s-circle {
-  top: -1px;
-  width: 67px;
-  height: 15px;
-  border-width: 0;
-  background-color: #ff4081;
-  border-radius: 20px;
+	top: -1px;
+	width: 67px;
+	height: 15px;
+	border-width: 0;
+	background-color: #ff4081;
+	border-radius: 20px;
 }
 
 #s-cover:hover span {
-  top: 50%;
-  left: 56px;
-  width: 25px;
-  margin-top: -9px;
-  transform: rotateZ(0);
+	top: 50%;
+	left: 56px;
+	width: 25px;
+	margin-top: -9px;
+	transform: rotateZ(0);
 }
 
 #s-cover:hover button span:before {
-  bottom: 11px;
-  transform: rotateZ(52deg);
+	bottom: 11px;
+	transform: rotateZ(52deg);
 }
 
 #s-cover:hover button span:after {
-  bottom: -11px;
-  transform: rotateZ(-52deg);
-}
-#s-cover:hover button span:before,
-#s-cover:hover button span:after {
-  right: -6px;
-  width: 40px;
-  background-color: #ff4081;
+	bottom: -11px;
+	transform: rotateZ(-52deg);
 }
 
+#s-cover:hover button span:before, #s-cover:hover button span:after {
+	right: -6px;
+	width: 40px;
+	background-color: #ff4081;
+}
 
 /* 카테고리 영역 */
-
 .center-category ul {
-    display: flex;
-    justify-content: center;
-    list-style: none;
-    padding: 0;
-    margin: 0;
+	display: flex;
+	justify-content: center;
+	list-style: none;
+	padding: 0;
+	margin: 0;
 }
 
 .center-category li {
-    margin: 0 15px;
+	margin: 0 15px;
 }
 
 .center-category a {
-    text-decoration: none;
-    color: #8d8d8d;
-    font-weight: bold;
+	text-decoration: none;
+	color: #8d8d8d;
+	font-weight: bold;
 }
 
-
 /* 헤더 하단 영역 */
-
-
-
-
