--- a/src/main/resources/static/css/insertTag.css
+++ b/src/main/resources/static/css/insertTag.css
@@ -15,15 +15,19 @@
 }
 
 .tag-input {
-    display: inline-block;
+    display: flex; /* display 속성을 inline-block에서 flex로 변경 */
+    flex-wrap: wrap; /* 내용을 줄 바꿈할 수 있도록 설정 */
     padding: 25px;
     border: 1px solid #ccc;
     border-radius: 5px;
     margin-right: 5px;
     margin-bottom: 5px;
     min-width: 120px;
-    box-sizing: border-box;   
-    white-space: normal;
+    min-height:100px;
+    box-sizing: border-box;
+    align-items: center; /* 요소들을 세로로 가운데 정렬 */
+    max-width: 100%; /* 컨테이너가 최대 너비를 가질 수 있도록 설정 */
+    height: auto;
     
 }
 
