--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,15 +1,9 @@
 /* 기존 CSS 스타일 유지 */
 /* index.css */
-body {
-	margin: 0;
-	padding: 0;
-	font-family: Arial, sans-serif;
-	overflow-x: hidden; /* 수평 스크롤 막기 */
-}
 
 .container--banner {
-	max-width: 1200px;
 	padding-top: 20px; /* 헤더 아래의 간격 */
+	display: flex;
 }
 
 .top--banner {
