--- a/src/main/resources/static/css/sidebar.css
+++ b/src/main/resources/static/css/sidebar.css
@@ -2,6 +2,7 @@
 
 
 .sidebar {
+  font-family: 'Nunito', sans-serif;
   position: fixed;
   top: 0;
   right: -450px; 
@@ -11,6 +12,7 @@
   box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
   transition: right 0.3s ease;
   z-index: 1000;
+  
 }
 
 .sidebar.open {
@@ -32,6 +34,7 @@
   text-decoration: none;
   color: #333;
   font-weight: bold;
+  
 }
 
 
