--- a/src/main/resources/static/css/chat/chat.css
+++ b/src/main/resources/static/css/chat/chat.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 
-  body {
+  
+body {
     font-family: Arial, sans-serif;
     background-color: pink;
     margin: 0;
@@ -58,6 +59,16 @@ button:hover {
     margin-bottom: 10px;
 }
 
+/* 본인 메시지는 오른쪽 정렬 */
+.my-message-container {
+    justify-content: flex-end;
+}
+
+/* 상대방 메시지는 왼쪽 정렬 */
+.other-message-container {
+    justify-content: flex-start;
+}
+
 .profile-image {
     width: 30px;
     height: 30px;
@@ -65,6 +76,7 @@ button:hover {
     margin-right: 10px;
 }
 
+/* 본인 메시지 스타일 */
 .my-message {
     background-color: #dcf8c6;
     border-radius: 10px;
@@ -75,6 +87,7 @@ button:hover {
     text-align: left;
 }
 
+/* 상대방 메시지 스타일 */
 .other-message {
     background-color: #f1f0f0;
     border-radius: 10px;
