--- a/src/main/resources/static/css/workList.css
+++ b/src/main/resources/static/css/workList.css
@@ -1,25 +1,25 @@
 @charset "UTF-8";
 
 /* 전체 컨테이너 */
-.area--content--container {
+.center--content--container {
 	display: flex;
 	flex-direction: column;
 	gap: 20px;
 	padding: 20px;
 	width: 100vw;
 	box-sizing: border-box;
+	border: solid 1px #333;
+	margin: 20px;
 }
 
-/* 전체 아이템 컨테이너 */
-.area--item--container {
+/* 책 영역 */
+.book--area {
 	display: flex;
 	justify-content: flex-start; /* 기본적으로 left-section만 보이도록 설정 */
 	align-items: flex-start;
 	gap: 10px; /* left-section과 extra-content 사이의 기본 간격 설정 */
 	padding: 15px; /* 전체 컨테이너 padding */
 	margin-bottom: 20px; /* 각 아이템 간의 하단 여백 */
-	border: 1px solid #ddd; /* 컨테이너 테두리 */
-	background-color: #f9f9f9; /* 배경색 */
 	box-sizing: border-box;
 	width: fit-content; /* left-section의 크기에 맞게 컨테이너 크기 조정 */
 }	
@@ -36,8 +36,9 @@
 
 /* 커버 이미지 스타일 */
 .img--cover--style {
-	width: 100px;
-	height: auto;
+	width: 223px;
+	height: 333;
+	border: solid 1px #333;
 }
 
 /* book-info: 이미지와 텍스트 간격 설정 */
@@ -102,12 +103,49 @@
 	color: #333;
 }
 
+
+
 /* 태그를 포함하는 영역에 Flexbox 적용 */
 .text--book--tags {
 	display: flex; /* 태그들을 가로로 정렬 */
 	flex-wrap: wrap; /* 태그가 화면 크기에 맞춰 줄바꿈되도록 설정 */
 	gap: 5px; /* 태그 사이에 5px의 간격을 추가 */
 }
+
+
+
+.top--nav--area{
+	display: flex;
+	justify-content: center;
+	width: 100vw;
+	
+
+}
+
+.navbar{
+
+font-weight: bold;
+}
+
+.navbar a{
+	text-decoration: none;
+	color: #f06292;
+	padding-right: 20px;
+}
+
+/* 버튼 영역 설정 */
+.top--btn--area{
+	display: flex;
+	width: 100vw;
+	justify-content: flex-end;
+	margin-right: 100px;
+}
+
+.btn--area{
+	display: flex;
+	justify-content:flex-end ;
+}
+
 
 /* 버튼 스타일 */
 .btn--insert {
