--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -89,6 +89,13 @@ p {
 	justify-content: center; /* 카테고리 버튼 중앙 정렬 */
 }
 
+.genre--filter {
+	display: flex;
+	gap: 15px;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	justify-content: center; /* 카테고리 버튼 중앙 정렬 */
+}
 .category--btn {
 	margin-top: 15px;
 	margin-bottom: 15px;
@@ -108,6 +115,29 @@ p {
 }
 
 .category--btn.active {
+	background-color: #FFF9D8;
+	color: #444;
+}
+
+.genre--btn {
+	margin-top: 15px;
+	margin-bottom: 15px;
+	height: 40px;
+	padding: 10px 15px;
+	background-color: #f9f9f9;
+	border-width: 1px; /* 변경된 부분: 1px로 설정 */
+	border-color: #dedede;
+	border-style: solid; /* 추가된 부분: solid로 명시적 설정 */
+	border-radius: 25px;
+	cursor: pointer;
+}
+
+.genre--btn:hover {
+	border-color: #FF4D6D; /* 변경된 부분 */
+	transition: background-color 0.3s ease;
+}
+
+.genre--btn.active {
 	background-color: #FFF9D8;
 	color: #444;
 }
