--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -11,5 +11,12 @@ main {
     flex-direction: column;
     align-items: center;
     padding: 30px;
+    width: 1200px;;
+}
+
+body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
